--- a/Results and Discussion/resultsanddiscussion.tex
+++ b/Results and Discussion/resultsanddiscussion.tex
@@ -8,6 +8,8 @@ The restricted Boltzmann machine is up and running and the hyperparamters has be
 \input{Results and Discussion/The Heisenberg model}
 \chapter{The Pairing model}
 \input{Results and Discussion/The Pairing model}
+\chapter{Computation time}
+\input{Results and Discussion/Computation time}
 \chapter{Comparing Metropolis-Hasting algorithm and the Gibbs sampling method}
 \input{Results and Discussion/Met-hast vs gibbs}
 
