--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,4 @@
 \begin{abstract}
-  In this thesis we build a restricted Boltzmann machine to approximate the ground state energy of the Lipkin-Meshkow-Glick model, the Ising model, the Heisenberg model and the Pairing model with both Gibbs sampling and with a state acceptance criteria. We found that for the Lipkin model our implementation of the restricted Boltzmann machine $ADD$. For the Ising model it $ADD$. Furthermore the Heisenberg model's ground state energy was predicted with an accuracy $ADD$. Lastly the restricted Boltzmann machine managed to predict the ground state energy of the Pairing model with $ADD$. The Gibbs sampling method was found to be $ADD$ than sampling with a acceptance criteria. We found our implementation compute the ground state energy for the Lipkin model at $ADD$, the Ising model at $ADD$, the Heisenberg model at $ADD$ and for the Pairing at $ADD$. Compared to standard diagonalization methods we found that our implementation of the restricted Boltzmann machine $ADD$.
+We implement a restricted Boltzmann machine that approximate the ground state energy of a Hamiltonian matrix. For the Lipkin model we see the accuracy of the RBM change drastically with the addition of pair excitation. The Ising model has the RBM managed the better approximate in general, though we find it diverging at low interaction strengths. The Heisenberg model ground state energy was shown to be accurately predicted overall, while for the Pairing model we find the RBM unable to take pair excitation into account. With diagonalization algorithm for sparse matrices we found indication that our RBM impementation is faster at higher system sizes. Lastly we compared the Metropolis-Hastings algorithm with and without acceptance criteria and found the criteria method to be slightly better at the cost of a large increase in computation time.
+
 \end{abstract}
