--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,4 @@
-Machine learning is becoming more and more prevalent in everyday life. As hardware has become stronger and learning models has been refined, machine learning has become a powerful tool to solve a wide variety of problems. Physics is no exception to this, as the last few years has shown a number of fields in physics furthered by machine learning. 
-
-Neural networks has been used to solve partial differential equations in the light of fluid dynamics\cite{RAISSI2019686}. For easier imaging of single atoms by noise reduction\cite{PhysRevApplied.14.014011}. For finding phase transitions\cite{vanNieuwenburg2017}, and much more.
+Machine learning is becoming more and more prevalent in everyday life. As hardware has become stronger and learning models has been refined, machine learning has become a powerful tool to solve a wide variety of problems. Physics is no exception to this, as the last few years has shown a number of fields in physics furthered by machine learning. Neural networks has been used to solve partial differential equations in the light of fluid dynamics\cite{RAISSI2019686}. For easier imaging of single atoms by noise reduction\cite{PhysRevApplied.14.014011}. For finding phase transitions\cite{vanNieuwenburg2017}, and much more.
 
 Quantum physics has often avenues for direct application of machine learning, as one wants to fit a wavefunction within the bounds of the Hamiltonian. Neural networks can learn through real measurement data or through the information contained in the Hamiltonian itself. The neural network provides a guess for either the amplitude of a given state, or it can be set up to guess the whole wavefunction as a neural net quantum state as introduced by G. Carlo and M. Troyer in 2017\cite{Carleo_2017}.
 
