--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,7 +1,9 @@
 \chapter{Conclusion}
 
-We successfully implemented a restricted Boltzmann machine uses the Hamiltonian matrix of a quantum mechanical model to approximate the ground state energy. For the Lipkin model we have seen that the accuracy of our implemented machine $ADD$. The Ising model has similar effects with $ADD$. On approximating the ground state energy of the Heisenberg model we see that the accuracy differs with $ADD$. The Pairing model's ground state energy approximation is better for $ADD$. 
-
-Our implementation has been done with the possibility of changing between the Gibbs sampling method and the Metropolis-Hastings algorithm with an acceptance criteria based in on the machines internal energy. We found that for $ADD$ we saw a increase in accuracy of the ground state energy prediction. The computation time was drastically lowered by the Gibbs sampling method because of its vectorization capabilities. With the Gibbs sampling method our implemented restricted Boltzmann machine's computation time evolved at the rate of $ADD$ for the Lipkin model. For the Ising model we saw a increase in computation time in the form of $ADD$ based on system size. The computation time for the Heisenberg model similarly increased at the rate of $ADD$. And for the Pairing model we saw that the computation time increased with $ADD$. Compared to the time taken to diagonalize the Hamiltonian matrix through the Numpy python library, we saw that our restricted Boltzmann machine gaining an advantage at the point of $ADD$ for the Lipkin model, $ADD$ for the Ising model, $ADD$ for the Heisenberg model and $ADD$ for the Pairing model. 
-
-For further research it is possible to increase the prediction accuracy through the addition of an adaptive learning rate, as discussed with the comparison with NetKet's accuracy with the one-dimensional Ising model. On a similar note the use of the stochastic reconfiguration method to optimize the hyperparameters would be necessary to compete with cutting edge implementations of the restricted Boltzmann machines. To test ones implementation it would also benefit to look at other quantum models as well, and especially at the higher end of system sizes, which has been limited here by hardware and computation time.
+We successfully implemented a restricted Boltzmann machine uses the Hamiltonian matrix of a quantum mechanical model to approximate the ground state energy. For the Lipkin model we see the accuracy of the RBM change greatly with he different interaction strengths, favouring low spin exchange strength without pair excitation and high spin exchange strength when with pair excitation. With the Ising model the RBM manages to come much closer to the true ground state energy in general, though we find that the RBM defaults to a single basis state wavefunction for low coupling strength, while the RBM prediction worsen as the external field strength approaches zero. The Heisenberg model ground state energy was shown to be accurately predicted for different coupling and external field strength for both one and two dimensions. On the other hand the Pairing model we saw the RBM struggle to predict the ground state energy for low single particle energies as well as low number of particle pairs and that it misses the effect of the pair excitation strength completely.
+\vspace{\baselineskip}\\
+Our implemented machine was found to be faster than standard diagonalization methods already at somewhat small system size, but with a more optimized diagonalization method we find the RBM to be slower, though we expect the RBM to overtake the optimized diagonalization method at greater system sizes.
+\vspace{\baselineskip}\\
+We also compared the Metropolis-Hastings algorithm with Gibbs sampling method and found that for the fixed number of Gibbs cycles we used the Metropolis-Hastings algorithm with an acceptance criteria preformed slightly better than Gibbs sampling, though at a great increase in computation time.
+\vspace{\baselineskip}\\
+For further research it is likely possible to increase the prediction accuracy through the addition of an adaptive learning rate. On a similar note the use of the stochastic reconfiguration method to optimize the hyperparameters would be necessary to compete with cutting edge implementations of the restricted Boltzmann machine. To test ones implementation it would also benefit to look at other quantum models as well, and especially at the higher end of system sizes, which has been limited here by hardware and computation time. For a more thorough implementation there would possibly also be optimization opportunities to bring the computation time even further.
